--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <script src="script.js"></script>
 </head>
 
-<body>
+<body onload="init()">
     <header>Bundesländer</header>
 
-    
-    
+    <div id="content"></div>
+
+    <div id="letterbox"></div>
 </body>
 </html>
