--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body onload="init()">
-    <header>Bundesländer</header>
+    <header>BUNDESLÄNDER</header>
 
     <div id="content"></div>
 
